[gd_scene load_steps=4 format=3 uid="uid://by5qgq6pa1ysq"]

[ext_resource type="Script" path="res://projects_plugin_entry.gd" id="1_cqq0t"]
[ext_resource type="Texture2D" uid="uid://cpqx8p1mug75n" path="res://Icons/Add.svg" id="2_i1r4k"]
[ext_resource type="Texture2D" uid="uid://bvh1h8wghn3eu" path="res://Icons/Remove.svg" id="2_l7ria"]

[node name="ProjectsPluginEntry" type="HBoxContainer"]
script = ExtResource("1_cqq0t")

[node name="Name" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Plugin name"
clip_text = true

[node name="VSeparator" type="VSeparator" parent="."]
visible = false
layout_mode = 2

[node name="Version" type="Label" parent="."]
custom_minimum_size = Vector2(51, 0)
layout_mode = 2
clip_text = true

[node name="VSeparator2" type="VSeparator" parent="."]
visible = false
layout_mode = 2

[node name="Status" type="CheckButton" parent="."]
layout_mode = 2
text = "Enabled"
flat = true

[node name="Delete" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("2_l7ria")

[node name="Add" type="Button" parent="."]
visible = false
layout_mode = 2
text = "Add"
icon = ExtResource("2_i1r4k")

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
initial_position = 2
dialog_text = "Delete this plugin from the project? (This action modifies the filesystem)"

[connection signal="toggled" from="Status" to="." method="_on_status_toggled"]
[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="Add" to="." method="_on_add_pressed"]
[connection signal="canceled" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
